add ganymede and more fixes